--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col text-white">
                 <div class="top-right">15+ Years of Experience</div>
                 <div class="right">Better Private <br> Security</div>
-                <div class="bottom-right">Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Iure ratione laborum ducimus asperiores sequi, fugit.</div>
+                <div class="bottom-right">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</div>
                 <div class="bottom">
                     <i class='fas fa-phone phone'></i>
                 </div>
