--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
 </head>
 <body>
@@ -58,8 +59,8 @@
                     <i class='fas fa-phone phone'></i>
                 </div>
                 <div class="icons">
-                    <h5 class="fw-bold fs-5" style="letter-spacing: 3px;">Call Us Today:</h5>
-                    <p class=" fw-bold fs-2">1-234-Secure90</p>
+                    <h5 class="fw-bold" style="letter-spacing: 3px;">Call Us Today: <br> <span class="fs-2"> 1-234-Secure90 </span> </h5>
+                    <!-- <p class=" fw-bold fs-2">1-234-Secure90</p> -->
                 </div>
             </div>
         </div>
@@ -307,13 +308,13 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script>
+    <!-- <script>
       $(document).ready(function () {
         $('.nav-link').on('click', function () {
           $('.nav-link').removeClass('active');
           $(this).addClass('active');
         });
       });
-    </script>
+    </script> -->
 </body>
 </html>
