--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <nav class="navbar navbar-expand-lg navbar-light bg-black">
-                <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light bg-black fixed-top">
+            <div class="container-fluid">
+            <!-- <nav class="navbar navbar-expand-lg navbar-light bg-black"> -->
+                <!-- <div class="container-fluid"> -->
                     <a class="navbar-brand" href="file:///C:/Users/AL-FARES/Desktop/Business%20Website/index.html">
                         <img src="site-logo-light.svg" alt="" class="logo">
                     </a>
@@ -52,7 +54,7 @@
         </div>
         <section id="home">
             <div class="row bg">
-                <img src="Background-image.1.jpg" alt="">
+                <img src="Background-image.1.jpg" alt="" class="bg-image">
                 <div class="col"></div>
                 <div class="col text-white">
                     <div class="top-right">15+ YEARS OF EXPERIENCE</div>
