--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <div class="container-fluid">
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light bg-black fixed-top">
-            <div class="container-fluid">
-            <!-- <nav class="navbar navbar-expand-lg navbar-light bg-black"> -->
-                <!-- <div class="container-fluid"> -->
+                <div class="container-fluid">
                     <a class="navbar-brand" href="file:///C:/Users/AL-FARES/Desktop/Business%20Website/index.html">
                         <img src="site-logo-light.svg" alt="" class="logo">
                     </a>
@@ -78,20 +76,20 @@
                     <a href="https://natashaasnani.kvtech.net/wpportfolio/" class="click py-5 my-5" id="openLink"> <i class="fas fa-arrow-right arrow"></i> CLICK HERE</a>
                 </div>
                 <div class="col clients">
-                    <div class="row">
+                    <div class="row numbers">
                         <h6 class="text-white mt-5 py-5 px-5" style="letter-spacing: 2px;">LET THE NUMBERS TALK</h6>
                         <div class="col-12 col-md-6">
                             <h5 class="text-white px-5"> <span class="YOB">15+</span> <br>Years in business </h5>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 happy">
                             <h5 class="text-white px-5"> <span class="YOB">500+</span> <br> Happy Customers </h5>
                         </div>
                     </div>
-                    <div class="row py-5 my-5">
+                    <div class="row py-5 my-5 numbers">
                         <div class="col-12 col-md-6">
                             <h5 class="text-white px-5"> <span class="YOB">128</span> <br>Licensed Officer </h5>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 happy">
                             <h5 class="text-white px-5"> <span class="YOB">2K+</span> <br> Assets Protected </h5>
                         </div>
                     </div>
@@ -300,16 +298,16 @@
                 <div class="col text-white my-5 py-5 company">
                     <h2>Company</h2>
                     <div class="p1">
-                        <a href="">About Us </a>
+                        <a href="#about">About Us </a>
                     </div>
                     <div>
                         <a href="">Training</a>  
                     </div>
                     <div>
-                        <a href="">Careers</a>
+                        <a href="#services">Careers</a>
                     </div>
                     <div>
-                        <a href="">Contact Us</a>
+                        <a href="#contact">Contact Us</a>
                     </div>
                 </div>
                 <div class="col text-white my-5 py-5 address">
